# your-smart-accountant

./: .env  bun.lockb  package.json  vite.config.ts
.github/workflows/: build-windows-installer.yml  build.yml
.lovable/: plan.md
docs/: REMIX_CHECKLIST.md
electron/: main.cjs  package.json  preload.cjs  splash.html
public/gstr3b/: GSTR3B_Excel_Utility_V5.8.xlsm
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppSidebar.tsx  BackupNudgeBanner.tsx  CompanyFlyout.tsx  CompanySwitcher.tsx  CurrencySwitcher.tsx  EmptyState.tsx  LanguageSwitcher.tsx  QuickActionsRibbon.tsx
src/lib/: account-groups-runtime.tsx  account-groups.ts  ai-gateway.ts  assistant-engine.ts  assistant.functions.ts  auth-context.tsx  backup-policy.ts  backup.ts  bank-rec.ts  bom.ts  company-context.tsx  constants.ts  csv.ts  currency.tsx  desktop-save.ts  einvoice.ts  entity-status.ts  error-message.ts  export-format.ts  exporters.ts  format-date.ts  fy-lock.ts  gst-returns.ts  gst.ts  gstin-lookup.functions.ts  gstr2b-recon.ts  gstr3b-template.ts  i18n.tsx  invoice-pdf.ts  local-mirror.ts  masters-cache.tsx  money.ts  native-bridge.ts  ocr.ts  pdf-fonts.ts  period-locks.ts  reminders.ts  report-grouping.tsx  report-i18n-rules.ts  report-i18n.ts  (+14 more)
src/routes/: __root.tsx  app.account-groups.tsx  app.bank.tsx  app.companies.tsx  app.einvoice.tsx  app.housekeeping.tsx  app.index.tsx  app.items.tsx  app.ledgers.tsx  app.recurring.tsx  app.reports.brs.tsx  (+34 more)
supabase/: config.toml
(+101 files in other folders)
