[package]
name = "smart-accountant"
version = "0.1.0"
description = "Smart Accountant Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "smart_accountant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
